test/Ingress/policy-ingess.yaml
apiVersion : policy.nirmata.io/v1alpha1
kind : Policy
metadata :
  name : policy-ingress
spec :
  failurePolicy: stopOnError
  rules:
    - resource:
        kind : Ingress
        selector:
          matchLabels:
            originalLabel: isHere
      patch:
        - path: "/metadata/labels/isMutated"
          op: add
          value: "true"
        - path : "/spec/rules/0/http/paths/0/path"
          op : replace
          value: "/mutatedpath"
